<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#252525"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/signUpImg"
        android:src="@drawable/signup"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginTop="0dp"/>

    <TextView
        android:id="@+id/signUpTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"/>

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"/>

    <EditText
        android:id="@+id/userEdt"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/credintials_bg"
        android:inputType="text"
        android:padding="4dp"
        android:textColor="#FFFFFF"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/emailTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_mail"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"/>

    <EditText
        android:id="@+id/emailEdt"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/credintials_bg"
        android:inputType="textEmailAddress"
        android:padding="4dp"
        android:textColor="#FFFFFF"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/passTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"/>

    <EditText
        android:id="@+id/passEdt"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/credintials_bg"
        android:inputType="textPassword"
        android:padding="4dp"
        android:textColor="#FFFFFF"
        android:textSize="12sp" />

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="match_parent"
        android:backgroundTint="@color/Orange"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="25dp"
        android:text="@string/sign_up"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes_acc"
       android:layout_gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/signInOnsignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_gravity="center"
        android:textColor="@color/Orange"/>

</LinearLayout>