<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#252525"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/signInImg"
        android:src="@drawable/login_img"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginTop="0dp"/>

    <TextView
        android:id="@+id/loginTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"/>

    <TextView
        android:id="@+id/emailTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_mail"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"/>

    <EditText
        android:id="@+id/emailEdt"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textSize="12sp"
        android:padding="4dp"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="25dp"
        android:background="@drawable/credintials_bg"/>

    <TextView
        android:id="@+id/passTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"/>

    <EditText
        android:id="@+id/passEdt"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:inputType="textPassword"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="25dp"
        android:background="@drawable/credintials_bg"
        android:textColor="#000000"
        android:textSize="12sp"
        android:padding="4dp"/>


    <ProgressBar
        android:id="@+id/loginProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:backgroundTint="@color/Orange"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="25dp"
        android:text="@string/login"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_acc"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="90dp"/>

    <TextView
        android:id="@+id/signUpOnsignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_gravity="center"
        android:textColor="@color/Orange" />

</LinearLayout>